Bug 499828 - kill LAZY_ADD and use async storage instead. r=sdwilsh