toolkit/components/places/src/nsNavHistory.cpp
@@ -162,17 +162,6 @@ using namespace mozilla::places;
 // USECS_PER_DAY == PR_USEC_PER_SEC * 60 * 60 * 24;
 static const PRInt64 USECS_PER_DAY = LL_INIT(20, 500654080);
 
-#ifdef LAZY_ADD
-
-// time that we'll wait before committing messages
-#define LAZY_MESSAGE_TIMEOUT (3 * PR_MSEC_PER_SEC)
-
-// the maximum number of times we'll postpone a lazy timer before committing
-// See StartLazyTimer()
-#define MAX_LAZY_TIMER_DEFERMENTS 2
-
-#endif // LAZY_ADD
-
 // character-set annotation
 #define CHARSET_ANNO NS_LITERAL_CSTRING("URIProperties/characterSet")
 
@@ -377,10 +366,6 @@ nsNavHistory::nsNavHistory()
 , mCanNotify(true)
 , mCacheObservers("history-observers")
 {
-#ifdef LAZY_ADD
-  mLazyTimerSet = PR_TRUE;
-  mLazyTimerDeferments = 0;
-#endif
   NS_ASSERTION(!gHistoryService,
                "Attempting to create two instances of the service!");
   gHistoryService = this;
@@ -2036,17 +2021,6 @@ nsNavHistory::FindLastVisit(nsIURI* aURI,
 
 PRBool nsNavHistory::IsURIStringVisited(const nsACString& aURIString)
 {
-#ifdef LAZY_ADD
-  // check the lazy list to see if this has recently been added
-  for (PRUint32 i = 0; i < mLazyMessages.Length(); i ++) {
-    if (mLazyMessages[i].type == LazyMessage::Type_AddURI) {
-      if (aURIString.Equals(mLazyMessages[i].uriSpec))
-        return PR_TRUE;
-    }
-  }
-#endif
-
-  // check the main DB
   mozStorageStatementScoper scoper(mDBIsPageVisited);
   nsresult rv = URIBinder::Bind(mDBIsPageVisited, 0, aURIString);
   NS_ENSURE_SUCCESS(rv, PR_FALSE);
@@ -2640,7 +2614,6 @@ nsNavHistory::CalculateFullVisitCount(PRInt64 aPlaceId, PRInt32 *aVisitCount)
 // transition type of the visit.
 // Later, in AddVisitChain() the next visit to this page will be associated to
 // TRANSITION_BOOKMARK.
-// Note, AddVisitChain() is not called immediately if LAZY_ADD is enabled.
 //
 // @see MarkPageAsTyped
 
@@ -4616,11 +4589,6 @@ nsNavHistory::RemovePages(nsIURI **aURIs, PRUint32 aLength, PRBool aDoBatchNotif
   NS_ASSERTION(NS_IsMainThread(), "This can only be called on the main thread");
   NS_ENSURE_ARG(aURIs);
 
-#ifdef LAZY_ADD
-  // We must ensure to remove pages from the lazy messages queue too.
-  CommitLazyMessages();
-#endif
-
   nsresult rv;
   // build a list of place ids to delete
   nsCString deletePlaceIdsQueryString;
@@ -4689,11 +4657,6 @@ NS_IMETHODIMP
 nsNavHistory::RemovePagesFromHost(const nsACString& aHost, PRBool aEntireDomain)
 {
   NS_ASSERTION(NS_IsMainThread(), "This can only be called on the main thread");
-
-#ifdef LAZY_ADD
-  // We must ensure to remove pages from the lazy messages queue too.
-  CommitLazyMessages();
-#endif
 
   nsresult rv;
   // Local files don't have any host name. We don't want to delete all files in
@@ -4783,11 +4746,6 @@ nsNavHistory::RemovePagesByTimeframe(PRTime aBeginTime, PRTime aEndTime)
 {
   NS_ASSERTION(NS_IsMainThread(), "This can only be called on the main thread");
 
-#ifdef LAZY_ADD
-  // We must ensure to remove pages from the lazy messages queue too.
-  CommitLazyMessages();
-#endif
-
   nsresult rv;
   // build a list of place ids to delete
   nsCString deletePlaceIdsQueryString;
@@ -4858,11 +4816,6 @@ NS_IMETHODIMP
 nsNavHistory::RemoveVisitsByTimeframe(PRTime aBeginTime, PRTime aEndTime)
 {
   NS_ASSERTION(NS_IsMainThread(), "This can only be called on the main thread");
-
-#ifdef LAZY_ADD
-  // We must ensure to remove pages from the lazy messages queue too.
-  CommitLazyMessages();
-#endif
 
   nsresult rv;
 
@@ -4956,11 +4909,6 @@ nsNavHistory::RemoveAllPages()
 
   mozStorageTransaction transaction(mDBConn, PR_FALSE);
 
-#ifdef LAZY_ADD
-  // We must ensure to remove pages from the lazy messages queue too.
-  CommitLazyMessages();
-#endif
-
   // reset frecency for all items that will _not_ be deleted
   // Note, we set frecency to -visit_count since we use that value in our
   // idle query to figure out which places to recalcuate frecency first.
@@ -5034,7 +4982,6 @@ nsNavHistory::HidePage(nsIURI *aURI)
 // transition type of the visit.
 // Later, in AddVisitChain() the next visit to this page will be associated to
 // TRANSITION_TYPED.
-// Note, AddVisitChain() is not called immediately if LAZY_ADD is enabled.
 //
 // @see MarkPageAsFollowedBookmark
 
@@ -5069,7 +5016,6 @@ nsNavHistory::MarkPageAsTyped(nsIURI *aURI)
 // transition type of the visit.
 // Later, in AddVisitChain() the next visit to this page will be associated to
 // TRANSITION_FRAMED_LINK or TRANSITION_LINK.
-// Note, AddVisitChain() is not called immediately if LAZY_ADD is enabled.
 //
 // @see MarkPageAsTyped
 
@@ -5118,7 +5064,7 @@ nsNavHistory::RegisterOpenPage(nsIURI* aURI)
 
   PRInt64 placeId;
   // Note: If the URI has never been added to history (but can be added),
-  // LAZY_ADD will cause this to add an orphan page, until the visit is added.
+  // this could add an orphan page, until the visit is added.
   rv = GetUrlIdFor(aURI, &placeId, canAdd);
   NS_ENSURE_SUCCESS(rv, rv);
   if (placeId == 0)
@@ -5252,23 +5198,8 @@ nsNavHistory::AddURI(nsIURI *aURI, PRBool aRedirect,
 
   PRTime now = PR_Now();
 
-#ifdef LAZY_ADD
-  LazyMessage message;
-  rv = message.Init(LazyMessage::Type_AddURI, aURI);
-  NS_ENSURE_SUCCESS(rv, rv);
-  message.isRedirect = aRedirect;
-  message.isToplevel = aToplevel;
-  if (aReferrer) {
-    rv = aReferrer->Clone(getter_AddRefs(message.referrer));
-    NS_ENSURE_SUCCESS(rv, rv);
-  }
-  message.time = now;
-  rv = AddLazyMessage(message);
-  NS_ENSURE_SUCCESS(rv, rv);
-#else
   rv = AddURIInternal(aURI, now, aRedirect, aToplevel, aReferrer);
   NS_ENSURE_SUCCESS(rv, rv);
-#endif
 
   return NS_OK;
 }
@@ -5503,22 +5434,19 @@ nsNavHistory::SetPageTitle(nsIURI* aURI,
   // We don't want to set it to an empty string, but to a NULL value,
   // so we use SetIsVoid and SetPageTitleInternal will take care of that
 
-#ifdef LAZY_ADD
-  LazyMessage message;
-  nsresult rv = message.Init(LazyMessage::Type_Title, aURI);
-  NS_ENSURE_SUCCESS(rv, rv);
-  message.title = aTitle;
-  if (aTitle.IsEmpty())
-    message.title.SetIsVoid(PR_TRUE);
-  return AddLazyMessage(message);
-#else
+  nsresult rv;
   if (aTitle.IsEmpty()) {
+    // Using a void string to bind a NULL in the database.
     nsString voidString;
     voidString.SetIsVoid(PR_TRUE);
-    return SetPageTitleInternal(aURI, voidString);
+    rv = SetPageTitleInternal(aURI, voidString);
   }
-  return SetPageTitleInternal(aURI, aTitle);
-#endif
+  else {
+    rv = SetPageTitleInternal(aURI, aTitle);
+  }
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  return NS_OK;
 }
 
 NS_IMETHODIMP
@@ -5793,18 +5721,6 @@ nsNavHistory::Observe(nsISupports *aSubject, const char *aTopic,
     if (prefService)
       prefService->SavePrefFile(nsnull);
 
-#ifdef LAZY_ADD
-    // Commit all pending lazy messages.
-    CommitLazyMessages(PR_TRUE);
-
-    // Kill lazy timer or it could fire later when statements won't be valid
-    // anymore.
-    if (mLazyTimer) {
-      mLazyTimer->Cancel();
-      mLazyTimer = 0;
-    }
-#endif
-
     // Finalize all statements.
     nsresult rv = FinalizeInternalStatements();
     NS_ENSURE_SUCCESS(rv, rv);
@@ -5864,25 +5780,9 @@ nsNavHistory::Observe(nsISupports *aSubject, const char *aTopic,
 
   else if (strcmp(aTopic, NS_PRIVATE_BROWSING_SWITCH_TOPIC) == 0) {
     if (NS_LITERAL_STRING(NS_PRIVATE_BROWSING_ENTER).Equals(aData)) {
-#ifdef LAZY_ADD
-      // Commit all lazy messages in order to protect against edge cases where a
-      // lazy message which is not allowed in private browsing mode has been
-      // added before entering the private browsing mode, and is going to be
-      // scheduled to be processed after entering the private browsing mode.
-      CommitLazyMessages();
-#endif
-
       mInPrivateBrowsing = PR_TRUE;
     }
     else if (NS_LITERAL_STRING(NS_PRIVATE_BROWSING_LEAVE).Equals(aData)) {
-#ifdef LAZY_ADD
-      // Commit all lazy messages in order to protect against edge cases where a
-      // lazy message which should be processed in private browsing mode has been
-      // added before leaving the private browsing mode, and is going to be
-      // scheduled to be processed after leaving the private browsing mode.
-      CommitLazyMessages();
-#endif
-
       mInPrivateBrowsing = PR_FALSE;
     }
   }
@@ -6057,124 +5957,6 @@ nsNavHistory::DecayFrecency()
 
   return NS_OK;
 }
-
-// Lazy stuff ******************************************************************
-
-#ifdef LAZY_ADD
-
-nsresult
-nsNavHistory::AddLazyLoadFaviconMessage(nsIURI* aPageURI,
-                                        nsIURI* aFaviconURI,
-                                        PRBool aForceReload,
-                                        nsIFaviconDataCallback* aCallback)
-{
-  LazyMessage message;
-  nsresult rv = message.Init(LazyMessage::Type_Favicon, aPageURI);
-  NS_ENSURE_SUCCESS(rv, rv);
-  rv = aFaviconURI->Clone(getter_AddRefs(message.favicon));
-  NS_ENSURE_SUCCESS(rv, rv);
-  message.alwaysLoadFavicon = aForceReload;
-  message.callback = aCallback;
-  return AddLazyMessage(message);
-}
-
-
-// nsNavHistory::StartLazyTimer
-//
-//    This schedules flushing of the lazy message queue for the future.
-//
-//    If we already have timer set, we canel it and schedule a new timer in
-//    the future. This saves you from having to wait if you open a bunch of
-//    pages in a row. However, we don't want to defer too long, so we'll only
-//    push it back MAX_LAZY_TIMER_DEFERMENTS times. After that we always
-//    let the timer go the next time.
-
-nsresult
-nsNavHistory::StartLazyTimer()
-{
-  if (! mLazyTimer) {
-    mLazyTimer = do_CreateInstance("@mozilla.org/timer;1");
-    if (! mLazyTimer)
-      return NS_ERROR_OUT_OF_MEMORY;
-  } else {
-    if (mLazyTimerSet) {
-      if (mLazyTimerDeferments >= MAX_LAZY_TIMER_DEFERMENTS) {
-        // already set and we don't want to push it back any later, use that one
-        return NS_OK;
-      } else {
-        // push back the active timer
-        mLazyTimer->Cancel();
-        mLazyTimerDeferments ++;
-      }
-    }
-  }
-  nsresult rv = mLazyTimer->InitWithFuncCallback(LazyTimerCallback, this,
-                                                 LAZY_MESSAGE_TIMEOUT,
-                                                 nsITimer::TYPE_ONE_SHOT);
-  NS_ENSURE_SUCCESS(rv, rv);
-  mLazyTimerSet = PR_TRUE;
-  return NS_OK;
-}
-
-
-// nsNavHistory::AddLazyMessage
-
-nsresult
-nsNavHistory::AddLazyMessage(const LazyMessage& aMessage)
-{
-  if (! mLazyMessages.AppendElement(aMessage))
-    return NS_ERROR_OUT_OF_MEMORY;
-  return StartLazyTimer();
-}
-
-
-// nsNavHistory::LazyTimerCallback
-
-void // static
-nsNavHistory::LazyTimerCallback(nsITimer* aTimer, void* aClosure)
-{
-  nsNavHistory* that = static_cast<nsNavHistory*>(aClosure);
-  that->mLazyTimerSet = PR_FALSE;
-  that->mLazyTimerDeferments = 0;
-  that->CommitLazyMessages();
-}
-
-// nsNavHistory::CommitLazyMessages
-
-void
-nsNavHistory::CommitLazyMessages(PRBool aIsShutdown)
-{
-  mozStorageTransaction transaction(mDBConn, PR_TRUE);
-  for (PRUint32 i = 0; i < mLazyMessages.Length(); i ++) {
-    LazyMessage& message = mLazyMessages[i];
-    switch (message.type) {
-      case LazyMessage::Type_AddURI:
-        AddURIInternal(message.uri, message.time, message.isRedirect,
-                       message.isToplevel, message.referrer);
-        break;
-      case LazyMessage::Type_Title:
-        SetPageTitleInternal(message.uri, message.title);
-        break;
-      case LazyMessage::Type_Favicon: {
-        // Favicons cannot use async channels after shutdown.
-        if (aIsShutdown)
-          continue;
-        nsFaviconService* faviconService = nsFaviconService::GetFaviconService();
-        if (faviconService) {
-          faviconService->DoSetAndLoadFaviconForPage(message.uri,
-                                                     message.favicon,
-                                                     message.alwaysLoadFavicon,
-                                                     message.callback);
-        }
-        break;
-      }
-      default:
-        NS_NOTREACHED("Invalid lazy message type");
-    }
-  }
-  mLazyMessages.Clear();
-}
-#endif // LAZY_ADD
 
 
 // Query stuff *****************************************************************
